--- a/index_06.html
+++ b/index_06.html
@@ -93,7 +93,7 @@
 
                         <div class="col-md-8 col-sm-7 hidden-xs">
                             <div class="top_contact">
-                               <i class="fa fa-mobile" aria-hidden="true"></i> (495) 20-435-20
+                                <i class="fa fa-mobile" aria-hidden="true"></i> (495) 20-435-20
                             </div>
                         </div>
                         <div class="col-md-2 col-sm-2 col-xs-8">
@@ -164,26 +164,26 @@
                         <img src="img/img1.jpg" alt="">
                         <div class="carousel-caption">
                             <h3>АУДИОРОЛИКИ</h3>
-					<div class="center_btn">
-						<button type="button" class="zakaz_btn">СДЕЛАТЬ ЗАКАЗ</button>
-					</div>
+                            <div class="center_btn">
+                                <button type="button" class="zakaz_btn">СДЕЛАТЬ ЗАКАЗ</button>
+                            </div>
                         </div>
                     </div>
                     <div class="item">
                         <img src="img/img2.jpg" alt="">
                         <div class="carousel-caption">
                             <h3>ОЗВУЧАНИЕ ВИДЕРОЛИКОВ</h3>
-					<div class="center_btn">
-						<button type="button" class="zakaz_btn">СДЕЛАТЬ ЗАКАЗ</button>
-					</div>
+                            <div class="center_btn">
+                                <button type="button" class="zakaz_btn">СДЕЛАТЬ ЗАКАЗ</button>
+                            </div>
                         </div>
                     </div>
                     <div class="item">
                         <img src="img/img3.jpg" alt="">
                         <div class="carousel-caption">
-					<div class="center_btn">
-						<button type="button" class="zakaz_btn">СДЕЛАТЬ ЗАКАЗ</button>
-					</div>
+                            <div class="center_btn">
+                                <button type="button" class="zakaz_btn">СДЕЛАТЬ ЗАКАЗ</button>
+                            </div>
                         </div>
                     </div>
 
@@ -200,48 +200,130 @@
 
         <div class="container">
 
-           <div class="fillcontainer">
-            <div class="row">
-                <div class="about">
-                    <div class="col-md-3 hidden-sm hidden-xs">
-                        <div class="circle_wrap">
-                            <a href="#" class="btn_circle">О нас</a>
+            <div class="fillcontainer">
+                <div class="row">
+                    <div class="about">
+                        <div class="col-md-4 hidden-sm hidden-xs">
+                            <div class="circle_wrap">
+                                <a href="#" class="btn_circle">Оплата</a>
+                            </div>
+                        </div>
+                        <div class="col-md-8 col-sm-12">
+                            <div>
+                                <a class="palitra"><img src="images/palit.png" alt="silafm"> </a>
+                            </div>
+                            <div class="righttext">
+                                <p>Мы принимаем платежи как в безнальной так и в электронных формах. Стоимость начитки одного текста от 5 до 45 секунд (не более 90 слов) включает запись голоса диктора (несколько дублей), услуги студии, простой монтаж, режиссуру, отправку файла на электронную почту и в Личный Кабинет. Для определения стоимости озвучки в рос.рублях, гривнах, тенге и др. валютах, отправьте, пожалуйста, <a href="mailto:sila.fm">письмо-запрос</a> с темой «Определить стоимость». В письме укажите фамилию диктора и приложите текст начитки. </p>
+                            </div>
+                            </p>
                         </div>
                     </div>
-                    <div class="col-md-9 col-sm-12">
-                           <a class="palitra"><img src="images/palit.png" alt="silafm"> </a>
-                        <p class="basictext">Мы принимаем платежи как в безнальной так и в электронных формах. Стоимость начитки одного текста от 5 до 45 секунд (не более 90 слов) включает запись голоса диктора (несколько дублей), услуги студии, простой монтаж, режиссуру, отправку файла на электронную почту и в Личный Кабинет. Для определения стоимости озвучки в рос.рублях, гривнах, тенге и др. валютах, отправьте, пожалуйста, письмо-запрос с темой «Определить стоимость». В письме укажите фамилию диктора и приложите текст начитки. </p>
-                        </p>
+                </div>
+                </hr>
+                <div class="row">
+                    <div class="col-md-4 hidden-sm hidden-xs">
+                       <div class="oprosnik">
+                        <h2>Опрос</h2>
+                        <br>
+                        <h4>Как вы нас нашли?</h4>
+                        <hr>
+                        <form>
+                        <div class="radio">
+                            <label>
+                                <input type="radio" name="gridRadios" id="gridRadios1" value="option1" checked><p>рекомендация коллег</p>
+                            </label>
+                        </div>
+                        <div class="radio">
+                            <label>
+                                <input type="radio" name="gridRadios" id="gridRadios2" value="option2"><p>ссылки с других сайтов</p>
+                            </label>
+                        </div>
+                        <div class="radio">
+                            <label>
+                                <input type="radio" name="gridRadios" id="gridRadios3" value="option3"><p>поиск в Google</p>
+                            </label>
+                        </div>
+                        <div class="radio">
+                            <label>
+                                <input type="radio" name="gridRadios" id="gridRadios3" value="option3"><p>поиск в Яндекс</p>
+                            </label>
+                        </div>
+                        <div class="radio">
+                            <label>
+                                <input type="radio" name="gridRadios" id="gridRadios3" value="option3"><p> поиск в Rambler</p>
+                            </label>
+                        </div>
+                        <div class="radio">
+                            <label>
+                                <input type="radio" name="gridRadios" id="gridRadios3" value="option3"><p> услышали работы</p>
+                            </label>
+                       </div>
+                       <button type="submit" class="btn btn-secondary">Ответить</button>
+                       </form>
+                    </div>
+
+                    </div>
+                    <div class="col-md-4">
+                        <h4>Для заказчиков из России и стран СНГ</h4>
+                        <div class="masonry-container">
+                            <div class="costimg grid-item">
+                                <a onclick="#"><img alt="" src="images/payment/br.png"></a>
+                            </div>
+                            <div class="costimg grid-item">
+                                <a onclick="#"><img alt="" src="images/payment/yandex.png"></a>
+                            </div>
+                            <div class="costimg grid-item">
+                                <a onclick="#"><img alt="" src="images/payment/qiwi.png"></a>
+                            </div>
+                            <div class="costimg grid-item">
+                                <a onclick="#"><img alt="" src="images/payment/alfabank.png"></a>
+                            </div>
+                            <div class="costimg grid-item">
+                                <a onclick="#"><img alt="" src="images/payment/cards.png"></a>
+                            </div>
+                            <div class="costimg grid-item">
+                                <a onclick="#"><img alt="" src="images/payment/paypal.png"></a>
+                            </div>
+                            <div class="costimg grid-item">
+                                <a onclick="#"><img alt="" src="images/payment/webmoney.png"></a>
+                            </div>
+                            <div class="costimg grid-item">
+                                <a onclick="#"><img alt="" src="images/payment/sberbank.png"></a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-md-4">
+                        <h4>Для заказчиков из Украины</h4>
+                        <div class="masonry-container">
+                            <div class="costimg grid-item">
+                                <a onclick="#"><img alt="" src="images/payment/br.png"></a>
+                            </div>
+                            <div class="costimg grid-item">
+                                <a onclick="#"><img alt="" src="images/payment/qiwi.png"></a>
+                            </div>
+                            <div class="costimg grid-item">
+                                <a onclick="#"><img alt="" src="images/payment/privat24.png"></a>
+                            </div>
+                            <div class="costimg grid-item">
+                                <a onclick="#"><img alt="" src="images/payment/cards.png"></a>
+                            </div>
+                            <div class="costimg grid-item">
+                                <a onclick="#"><img alt="" src="images/payment/paypal.png"></a>
+                            </div>
+                            <div class="costimg grid-item">
+                                <a onclick="#"><img alt="" src="images/payment/webmoney.png"></a>
+                            </div>
+                            <div class="costimg grid-item">
+                                <a onclick="#"><img alt="" src="images/payment/exchenge.png"></a>
+                            </div>
+                            <div class="costimg grid-item">
+                                <a onclick="#"><img alt="" src="images/payment/yandex.png"></a>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
-           <div style="clear:left;"><h2>ДЛЯ ЗАКАЗЧИКОВ ИЗ РОССИИ И СТРАН СНГ:</h2></div>
-<div class="row masonry-container">
-
-     <div class="grid-item">    <a onclick="show_bgfon(); $('#block_qiwi').show('mid');"><img alt="" src="images/payment/br.png"></a> </div>
-                <div class="grid-item">    <a onclick="show_bgfon(); $('#block_qiwi').show('mid');"><img alt="" src="images/payment/qiwi.png"></a> </div>
-                <div class="grid-item">    <a onclick="show_bgfon(); $('#block_alfabank').show('mid');"><img alt="" src="images/payment/alfabank.png"></a> </div>
-                <div class="grid-item">    <a onclick="show_bgfon(); $('#block_avangard').show('mid');"><img alt="" src="images/payment/cards.png"></a> </div>
-                <div class="grid-item">    <a onclick="show_bgfon(); $('#block_paypal').show('mid');"><img alt="" src="images/payment/paypal.png"></a> </div>
-                <div class="grid-item">    <a onclick="show_bgfon(); $('#block_webmoney').show('mid');"><img alt="" src="images/payment/webmoney.png"></a> </div>
-
-                <div class="grid-item">    <a onclick="show_bgfon(); $('#block_yandex').show('mid');"><img alt="" src="images/payment/yandex.png"></a> </div>
- </div>
-
-
-
-                <div style="clear:left;"><h2>ДЛЯ ЗАКАЗЧИКОВ ИЗ УКРАИНЫ:</h2></div>
-                <div class="row masonry-container">
-                <div class="grid-item">    <a onclick="show_bgfon(); $('#block_qiwi').show('mid');"><img alt="" src="images/payment/qiwi.png"></a> </div>
-                <div class="grid-item">    <a onclick="show_bgfon(); $('#block_privat24').show('mid');"><img alt="" src="images/payment/privat24.png"></a> </div>
-                <div class="grid-item">    <a onclick="show_bgfon(); $('#block_private').show('mid');"><img alt="" src="images/payment/cards.png"></a> </div>
-                <div class="grid-item">    <a onclick="show_bgfon(); $('#block_paypal').show('mid');"><img alt="" src="images/payment/paypal.png"></a> </div>
-                <div class="grid-item">    <a onclick="show_bgfon(); $('#block_webmoney').show('mid');"><img alt="" src="images/payment/webmoney.png"></a> </div>
-                <div class="grid-item">    <a onclick="show_bgfon(); $('#block_transfer').show('mid');"><img alt="" src="images/payment/exchenge.png"></a> </div>
-                <div class="grid-item">    <a onclick="show_bgfon(); $('#block_yandex').show('mid');"><img alt="" src="images/payment/yandex.png"></a> </div>
-                </div>
-
-        </div>
         </div>
     </section>
     <footer id="footer">
@@ -251,29 +333,29 @@
                     <h4>НАШИ ПРИНЦИПЫ:</h4>
                     <hr>
                     <p class="coment">"Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis qui, dicta, libero pariatur amet error adipisci autem magnam ea, explicabo ipsa quasi porro aspernatur nam dolorum sapiente voluptas eaque deleniti. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae repellendus amet alias."</p>
-                                   <br>
-                                   <br>
-                                   <hr>
+                    <br>
+                    <br>
+                    <hr>
                     <div class="footer_mn">
 
-                    <ul>
-                        <li>
-                            <a href="index.html">Главная</a>
-                        </li>
-                        <li>
-                            <a href="index_01.html">Дикторы</a>
-                        </li>
-                        <li>
-                            <a href="#">Услуги</a>
-                        </li>
-                        <li>
-                            <a href="#">Оплата</a>
-                        </li>
-                        <li>
-                            <a href="#">Контакты</a>
-                        </li>
-                    </ul>
-                </div>
+                        <ul>
+                            <li>
+                                <a href="index.html">Главная</a>
+                            </li>
+                            <li>
+                                <a href="index_01.html">Дикторы</a>
+                            </li>
+                            <li>
+                                <a href="#">Услуги</a>
+                            </li>
+                            <li>
+                                <a href="#">Оплата</a>
+                            </li>
+                            <li>
+                                <a href="#">Контакты</a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
                 <div class="col-md-3  col-md-offset-1">
                     <h4>ГРАФИК РАБОТЫ:</h4>
@@ -283,7 +365,7 @@
                     <h4>ПОЧТОВЫЙ АДРЕС:</h4>
                     <hr>
                     <p>г. Москва, пер. Электрический д.12 помещение ІІ, комн. 6</p>
-                     <p>г. Киев, пер. Электрический д.12 помещение ІІ, комн. 6</p>
+                    <p>г. Киев, пер. Электрический д.12 помещение ІІ, комн. 6</p>
                 </div>
                 <div class="col-md-3">
                     <h4>КОНТАКТЫ:</h4>
@@ -302,18 +384,19 @@
         </div>
         <div id="scrollup"><img alt="Прокрутить вверх" src="img/up.png"></div>
 
-    <div class="hidden">
-        <form id="callback" class="pop_form">
-            <h4>Заказать обратный звонок</h4>
-            <input type="text" name="name" placeholder="Ваше имя..." required />
-            <br>
-            <input type="text" name="phone" placeholder="Ваш телефон..." required/>
-            <br>
-            <input type="text" name="text" size="40" placeholder="Коментарии..." />
-            <br>
-            <button class="callzakaz" type="submit">Заказать</button>
-        </form>
-    </div>
-</footer>
+        <div class="hidden">
+            <form id="callback" class="pop_form">
+                <h4>Заказать обратный звонок</h4>
+                <input type="text" name="name" placeholder="Ваше имя..." required />
+                <br>
+                <input type="text" name="phone" placeholder="Ваш телефон..." required/>
+                <br>
+                <input type="text" name="text" size="40" placeholder="Коментарии..." />
+                <br>
+                <button class="callzakaz" type="submit">Заказать</button>
+            </form>
+        </div>
+    </footer>
 </body>
+
 </html>
