--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                                 </ul>
                             </li>
                             <li><a href="index_06.html">Оплата</a></li>
-                            <li><a href="#">Контакты</a></li>
+                            <li><a href="index_07.html">Контакты</a></li>
                         </ul>
                     </div>
                 </nav>
@@ -278,7 +278,7 @@
                 <div class="about">
                     <div class="col-md-3 hidden-sm hidden-xs">
                         <div class="circle_wrap">
-                            <a href="#" class="btn_circle">О нас</a>
+                            <a href="index_07.html" class="btn_circle">О нас</a>
                         </div>
                     </div>
                     <div class="col-md-9 col-sm-12">
