--- a/index_07.html
+++ b/index_07.html
@@ -138,7 +138,7 @@
                                 </ul>
                             </li>
                             <li><a href="index_06.html">Оплата</a></li>
-                            <li><a href="index_07.html">Контакты</a></li>
+                            <li><a href="#">Контакты</a></li>
                         </ul>
                     </div>
                 </nav>
@@ -203,126 +203,158 @@
             <div class="fillcontainer">
                 <div class="row">
                     <div class="about">
-                        <div class="col-md-4 hidden-sm hidden-xs">
-                            <div class="circle_wrap">
-                                <a href="#" class="btn_circle">Оплата</a>
+                        <div class="col-md-3 col-sm-4">
+                            <h2>Наши контакты</h2>
+                            <hr>
+                            <br>
+                            <h4>Москва</h4>
+                            <div class="row">
+                                <div class="col-md-3">
+                                    <p>Телефон:</p>
+                                </div>
+                                <div class="col-md-9">
+                                    <p>8 (495) 545-45-13</p>
+                                </div>
                             </div>
+                            <div class="row">
+                                <div class="col-md-3">
+                                    <p>Телефон:</p>
+                                </div>
+                                <div class="col-md-9">
+                                    <p>8 (965) 316-10-80</p>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-3">
+                                    <p>Адрес:</p>
+                                </div>
+                                <div class="col-md-9">
+                                    <p>пер. Электрический д.12, помещение ІІ, комн. 6</p>
+                                </div>
+                            </div>
+                            <h4>Киев</h4>
+                            <div class="row">
+                                <div class="col-md-3">
+                                    <p>Телефон:</p>
+                                </div>
+                                <div class="col-md-9">
+                                    <p>+38 (044) 545-77-13</p>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-3">
+                                    <p>Телефон:</p>
+                                </div>
+                                <div class="col-md-9">
+                                    <p>+38 (050) 530-79-75</p>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-3">
+                                    <p>Адрес:</p>
+                                </div>
+                                <div class="col-md-9">
+                                    <p>пер. Электрический д.12, помещение ІІ, комн. 6</p>
+                                </div>
+                            </div>
+                            <h4>В интернете</h4>
+                            <div class="row">
+                                <div class="col-md-3">
+                                    <p>E-mail:</p>
+                                </div>
+                                <div class="col-md-9">
+                                    <p><a href="mailto:info@sila.fm" class="link2">info@sila.fm</a></p>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-3">
+                                    <p>ICQ:</p>
+                                </div>
+                                <div class="col-md-9">
+                                    <p>322-653-493</p>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-3">
+                                    <p>Skype:</p>
+                                </div>
+                                <div class="col-md-9">
+                                    <p>sila.fm</p>
+                                </div>
+                            </div>
+
+                            <h4>График работы:</h4>
+
+                            <p>По будним дням: 09:00 - 23:00
+                                <br>По субботам: 10:00 - 15:00
+                                <br>Выходные: воскресенье</p><br>
+
+                            <h2>Наши проекты</h2>
+                             <hr>
+                            <p><a href="http://ivr-voice.com/" class="link2">IVR-Voice</a></p>
+                            <p><a href="http://detskie-golosa.ru/" class="link2">Детские голоса</a></p>
+                             <br>
+                             <h2>Наши партнеры</h2>
+                             <hr>
+                            <p><a href="http://www.mango-office.ru/" class="link2">Mango-office</a></p>
                         </div>
-                        <div class="col-md-8 col-sm-12">
-                            <div>
-                                <a class="palitra"><img src="images/palit.png" alt="silafm"> </a>
+                        <div class="col-md-9 col-sm-8">
+                            <div class="row">
+                                <div class="col-md-3">
+                                    <figure><img src="images/cnt_k_lara.png" alt=""></figure>
+                                </div>
+                                <div class="col-md-9">
+                                    <br>
+                                    <h4>Лара Ярошенко </h4
+                                    <br>
+                                    <p>руководитель, администратор</p>
+                                </div>
                             </div>
-                            <div class="righttext">
-                                <p>Мы принимаем платежи как в безнальной так и в электронных формах. Стоимость начитки одного текста от 5 до 45 секунд (не более 90 слов) включает запись голоса диктора (несколько дублей), услуги студии, простой монтаж, режиссуру, отправку файла на электронную почту и в Личный Кабинет. Для определения стоимости озвучки в рос.рублях, гривнах, тенге и др. валютах, отправьте, пожалуйста, <a href="mailto:sila.fm">письмо-запрос</a> с темой «Определить стоимость». В письме укажите фамилию диктора и приложите текст начитки. </p>
+                            <div class="row">
+                                <div class="col-md-3">
+                                   <figure><img src="images/cnt_k_kuba.png" alt=""></figure>
+                                </div>
+                                <div class="col-md-9">
+                                    <h4>Леонид Алмазов </h4>
+                                    <p>креативный директор</p>
+                                    <p class="righttext">Пишет сценарии к рекламе с 1905 года. В произведениях Маяковского и Есенина нередко вылавливает свои мысли и идеи. Сделав небольшой перерыв в 1917, в 1991 году с утроенной силой взялся за работу. Опыт и житейская мудрость, несколько с честью пережитых браков, хорошее чувство юмора, выдержанное клиентами, разбросанными по всему миру, сделали Леонида Иосифовича ярким бриллиантом. «Продать – значит подать», - считает Леонид Алмазов…И таки подает!</p>
+                                </div>
                             </div>
-                            </p>
+                            <div class="row">
+                                <div class="col-md-3">
+                                   <figure><img src="images/cnt_k_katya.png" alt=""></figure>
+                                </div>
+                                <div class="col-md-9">
+                                    <h4>Екатерина Лебедь </h4>
+                                    <p>бухгалтер, юрист</p>
+                                    <p class="righttext">Одна из самых загадочных и засекреченных фигур. Прежде чем стать бухгалтером и юристом в нашем агентстве, долгое время мечтала работать в суде и получать подарки, но, взвесив все минусы и плюсы, посоветовавшись с бабушкой и совестью, она выбрала «Силу ФМ». Кроме юридического образования, у Екатерины есть домашние животные и подруги, которые не дают ей полностью и бесповоротно кануть в пучине документооборота.</p>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-3">
+                                   <figure><img src="images/cnt_k_bogdan.png" alt=""></figure>
+                                </div>
+                                <div class="col-md-9">
+                                    <h4>Богдан Скоров</h4>
+                                    <p>звукорежиссер, дизайнер, композитор</p>
+                                    <p class="righttext">Если вы видели летящего на горном велосипеде задумчивого велосипедиста, то, скорее всего это был Богдан, опаздывающий на запись в студию. "Звукорежиссёрами не рождаются" – любит повторять он. Хотя сам звукорежиссером стал случайно. Постоянное самосовершенствование Богдана не терпит границ, поэтому он периодически выключает телефон, пропадая из зоны досягаемости простыми смертными.</p>
+                                </div>
+                            </div>
+                                <div class="row">
+                                <div class="col-md-3">
+                                   <figure><img src="images/cnt_k_vadim.png" alt=""></figure>
+                                </div>
+                                <div class="col-md-9">
+                                    <h4>Вадим Кузьмин</h4>
+                                    <p>звукорежиссер, аранжировщик</p>
+                                    <p class="righttext">Именно труд первого звукорежиссера, по мнению Вадима Кузьмина, сделал из обезьяны человека. Эволюция Вадима вне конкуренции. Ценитель вкуса в рекламных роликах, запаха корпоративных презентаций и цвета документального видео. Знает с чего начинать ролик и чем его заканчивать, почему в этом месте нужна труба, а, вот в этом – молодая девушка. Вадим знает всё о звуке все, кроме одного...сколько еще работы со звуком ему подбросят вечером.</p>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
-                </hr>
-                <div class="row">
-                    <div class="col-md-4 hidden-sm hidden-xs">
-                       <div class="oprosnik">
-                        <h2>Опрос</h2>
-                        <br>
-                        <h4>Как вы нас нашли?</h4>
-                        <hr>
-                        <form>
-                        <div class="radio">
-                            <label>
-                                <input type="radio" name="gridRadios" id="gridRadios1" value="option1" checked><p>рекомендация коллег</p>
-                            </label>
-                        </div>
-                        <div class="radio">
-                            <label>
-                                <input type="radio" name="gridRadios" id="gridRadios2" value="option2"><p>ссылки с других сайтов</p>
-                            </label>
-                        </div>
-                        <div class="radio">
-                            <label>
-                                <input type="radio" name="gridRadios" id="gridRadios3" value="option3"><p>поиск в Google</p>
-                            </label>
-                        </div>
-                        <div class="radio">
-                            <label>
-                                <input type="radio" name="gridRadios" id="gridRadios3" value="option3"><p>поиск в Яндекс</p>
-                            </label>
-                        </div>
-                        <div class="radio">
-                            <label>
-                                <input type="radio" name="gridRadios" id="gridRadios3" value="option3"><p> поиск в Rambler</p>
-                            </label>
-                        </div>
-                        <div class="radio">
-                            <label>
-                                <input type="radio" name="gridRadios" id="gridRadios3" value="option3"><p> услышали работы</p>
-                            </label>
-                       </div>
-                       <button type="submit" class="btn btn-secondary">Ответить</button>
-                       </form>
-                    </div>
 
-                    </div>
-                    <div class="col-md-4">
-                        <h4>Для заказчиков из России и стран СНГ</h4>
-                        <div class="masonry-container">
-                            <div class="costimg grid-item">
-                                <a onclick="#"><img alt="" src="images/payment/br.png"></a>
-                            </div>
-                            <div class="costimg grid-item">
-                                <a onclick="#"><img alt="" src="images/payment/yandex.png"></a>
-                            </div>
-                            <div class="costimg grid-item">
-                                <a onclick="#"><img alt="" src="images/payment/qiwi.png"></a>
-                            </div>
-                            <div class="costimg grid-item">
-                                <a onclick="#"><img alt="" src="images/payment/alfabank.png"></a>
-                            </div>
-                            <div class="costimg grid-item">
-                                <a onclick="#"><img alt="" src="images/payment/cards.png"></a>
-                            </div>
-                            <div class="costimg grid-item">
-                                <a onclick="#"><img alt="" src="images/payment/paypal.png"></a>
-                            </div>
-                            <div class="costimg grid-item">
-                                <a onclick="#"><img alt="" src="images/payment/webmoney.png"></a>
-                            </div>
-                            <div class="costimg grid-item">
-                                <a onclick="#"><img alt="" src="images/payment/sberbank.png"></a>
-                            </div>
-                        </div>
-                    </div>
 
-                    <div class="col-md-4">
-                        <h4>Для заказчиков из Украины</h4>
-                        <div class="masonry-container">
-                            <div class="costimg grid-item">
-                                <a onclick="#"><img alt="" src="images/payment/br.png"></a>
-                            </div>
-                            <div class="costimg grid-item">
-                                <a onclick="#"><img alt="" src="images/payment/qiwi.png"></a>
-                            </div>
-                            <div class="costimg grid-item">
-                                <a onclick="#"><img alt="" src="images/payment/privat24.png"></a>
-                            </div>
-                            <div class="costimg grid-item">
-                                <a onclick="#"><img alt="" src="images/payment/cards.png"></a>
-                            </div>
-                            <div class="costimg grid-item">
-                                <a onclick="#"><img alt="" src="images/payment/paypal.png"></a>
-                            </div>
-                            <div class="costimg grid-item">
-                                <a onclick="#"><img alt="" src="images/payment/webmoney.png"></a>
-                            </div>
-                            <div class="costimg grid-item">
-                                <a onclick="#"><img alt="" src="images/payment/exchenge.png"></a>
-                            </div>
-                            <div class="costimg grid-item">
-                                <a onclick="#"><img alt="" src="images/payment/yandex.png"></a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
             </div>
         </div>
     </section>
