--- a/index_01.html
+++ b/index_01.html
@@ -140,7 +140,7 @@
                                 </ul>
                             </li>
                             <li><a href="index_06.html">Оплата</a></li>
-                            <li><a href="#">Контакты</a></li>
+                            <li><a href="index_07.html">Контакты</a></li>
                         </ul>
                     </div>
                 </nav>
@@ -4758,7 +4758,7 @@
 
                         <ul>
                             <li>
-                                <a href="#">Главная</a>
+                                <a href="index_01.html">Главная</a>
                             </li>
                             <li>
                                 <a href="#">Дикторы</a>
@@ -4767,10 +4767,10 @@
                                 <a href="#">Услуги</a>
                             </li>
                             <li>
-                                <a href="#">Оплата</a>
+                                <a href="index_06.html">Оплата</a>
                             </li>
                             <li>
-                                <a href="#">Контакты</a>
+                                <a href="index_07.html">Контакты</a>
                             </li>
                         </ul>
                     </div>
