--- a/index_02.html
+++ b/index_02.html
@@ -120,7 +120,7 @@
                                 </ul>
                             </li>
                             <li><a href="index_06.html">Оплата</a></li>
-                            <li><a href="#">Контакты</a></li>
+                            <li><a href="index_07.html">Контакты</a></li>
                         </ul>
                     </div>
                 </nav>
@@ -1991,7 +1991,7 @@
 
                         <ul>
                             <li>
-                                <a href="#">Главная</a>
+                                <a href="index_01.html">Главная</a>
                             </li>
                             <li>
                                 <a href="#">Дикторы</a>
@@ -2000,10 +2000,10 @@
                                 <a href="#">Услуги</a>
                             </li>
                             <li>
-                                <a href="#">Оплата</a>
+                                <a href="index_06.html">Оплата</a>
                             </li>
                             <li>
-                                <a href="#">Контакты</a>
+                                <a href="index_07.html">Контакты</a>
                             </li>
                         </ul>
                     </div>
