--- a/index_03.html
+++ b/index_03.html
@@ -122,7 +122,7 @@
                                 </ul>
                             </li>
                             <li><a href="index_06.html">Оплата</a></li>
-                            <li><a href="#">Контакты</a></li>
+                            <li><a href="index_07.html">Контакты</a></li>
                         </ul>
                     </div>
                 </nav>
@@ -299,7 +299,7 @@
 
                         <ul>
                             <li>
-                                <a href="#">Главная</a>
+                                <a href="index_01.html">Главная</a>
                             </li>
                             <li>
                                 <a href="#">Дикторы</a>
@@ -308,10 +308,10 @@
                                 <a href="#">Услуги</a>
                             </li>
                             <li>
-                                <a href="#">Оплата</a>
+                                <a href="index_06.html">Оплата</a>
                             </li>
                             <li>
-                                <a href="#">Контакты</a>
+                                <a href="index_07.html">Контакты</a>
                             </li>
                         </ul>
                     </div>
